force-app/main/default/objects/RepairPart__c/RepairPart__c.object-meta.xml
<CustomObject>
    <label>Repair Part</label>
    <nameField>
        <label>RepairParts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repair Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>