force-app/main/default/objects/RepairPart__c/fields/PreferredVendor__c.field-meta.xml
<CustomField>
    <fullName>PreferredVendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Vendor</label>
    <referenceTo>PartsVendor__c</referenceTo>
    <relationshipLabel>Repair Parts</relationshipLabel>
    <relationshipName>Repair_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>