force-app/main/default/objects/RepairPart__c/fields/RepairProcedure__c.field-meta.xml
<CustomField>
    <fullName>RepairProcedure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RepairProcedure</label>
    <referenceTo>RepairProcedure__c</referenceTo>
    <relationshipLabel>Repair Parts</relationshipLabel>
    <relationshipName>Repair_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>